# flat-projection-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benches/: distance_benchmark.rs
src/: lib.rs  tests.rs
tests/: integration_test.rs
