[package]
name = "flat_projection"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
description = "Fast geodesic distance calculations via flat surface projection."
license = "MIT"
repository = "https://github.com/Turbo87/flat-projection-rs.git"
homepage = "https://github.com/Turbo87/flat-projection-rs.git"
documentation = "https://docs.rs/flat_projection/"

[dependencies]

[dev-dependencies]
assert_approx_eq = "1.0.0"
