[package]
name = "flat_projection"
version = "0.3.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
description = "Fast geodesic distance approximations via flat surface projection."
license = "MIT"
repository = "https://github.com/Turbo87/flat-projection-rs.git"
homepage = "https://github.com/Turbo87/flat-projection-rs.git"
documentation = "https://docs.rs/flat_projection/"
readme = "README.md"

[badges]
travis-ci = { repository = "Turbo87/flat-projection-rs", branch = "master" }

[dependencies]
num-traits = "0.2.2"

[dev-dependencies]
assert_approx_eq = "1.0.0"
criterion = "0.3.0"

[[bench]]
name = "distance_benchmark"
harness = false
